upd Brand image, meta

--- a/app/templates/partials/blocks/shop/category-product.hbs
+++ b/app/templates/partials/blocks/shop/category-product.hbs
@@ -8,9 +8,9 @@
     <div class="category-product__description">
       <h3 class="category-product__subtitle">Производитель:</h3>
       <div class="category-product__brand">
-        <div class="category-product__brand-image">
+        <a href="#" class="category-product__brand-image">
           {{>components/image no-2x=true img="brands/dukat" ext="png"}}
-        </div>
+        </a>
       </div>
       <h3 class="category-product__subtitle">Описание</h3>
       <p class="category-product__text">
