--- a/app/css/blocks/shop/category-product.scss
+++ b/app/css/blocks/shop/category-product.scss
@@ -45,6 +45,9 @@
 
   &__brand-image {
     position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
 
     &::after {
       display: block;
