--- a/app/css/core/grid.scss
+++ b/app/css/core/grid.scss
@@ -17,3 +17,14 @@ html {
     padding: 0 15px;
   }
 }
+
+.container-small {
+  width: 100%;
+  max-width: 794px;
+  margin: 0 auto;
+  padding: 0 12px;
+
+  @include media(mobile) {
+    padding: 0 15px;
+  }
+}
