--- a/app/css/blocks/common/icons.scss
+++ b/app/css/blocks/common/icons.scss
@@ -55,3 +55,32 @@
     transform: translateY(-50%) rotate(-45deg);
   }
 }
+
+.icon-arrowLeft {
+  position: relative;
+  display: inline-flex;
+  width: 12px;
+  height: 6px;
+
+  &::before,
+  &::after {
+    position: absolute;
+    right: 50%;
+    content: '';
+    display: block;
+    width: 60%;
+    height: 2px;
+    border-radius: 2px;
+    background-color: $color-gray-100;
+  }
+
+  &::before {
+    top: 0;
+    transform: translateY(-50%) rotate(-45deg);
+  }
+
+  &::after {
+    bottom: 0;
+    transform: translateY(-50%) rotate(45deg);
+  }
+}
