--- a/app/css/blocks/shop/category-product.scss
+++ b/app/css/blocks/shop/category-product.scss
@@ -15,6 +15,7 @@
     display: flex;
     place-items: center;
     grid-area: image;
+    max-height: 300px;
     background-color: $color-white;
   }
 
@@ -35,7 +36,7 @@
       width: 100%;
       height: 100%;
       object-position: center;
-      object-fit: contain;
+      object-fit: scale-down;
     }
   }
 
