--- a/app/css/widgets/catalog-item.scss
+++ b/app/css/widgets/catalog-item.scss
@@ -1,5 +1,6 @@
 .catalog-item {
   position: relative;
+  height: 100%;
 
   &__link {
     @include fill;
@@ -14,6 +15,7 @@
   }
 
   &__content {
+    height: 100%;
     padding: 15px 15px 20px;
     box-shadow: 0 0 0 0 transparent;
     @include transition;
