--- a/app/templates/pages/events-single.hbs
+++ b/app/templates/pages/events-single.hbs
@@ -1,22 +1,22 @@
-{{!Политика конфиденциальности}}
+{{!Мастер классы / Событие}}
 
-{{> layout/head page-title="Политика конфиденциальности"}}
+{{> layout/head page-title="Мастер классы / Событие"}}
 
-{{> layout/header}}
+{{> layout/header current-page="events"}}
 <main class="internal-template">
   <div class="container-small">
     <div class="internal-template__container">
       <div class="internal-template__breadcrumbs">
         <div class="page-breadcrumbs">
           <span class="page-breadcrumbs__item"><a class="page-breadcrumbs__link" href="#">СибХЦ</a></span>
-          <span class="page-breadcrumbs__item page-breadcrumbs__item--current">Политика конфиденциальности</span>
+          <span class="page-breadcrumbs__item page-breadcrumbs__item--current">Мастер класс / Событие</span>
         </div>
       </div>
       <div class="internal-template__header">
-        <h1 class="internal-template__title internal-template__title--big">Политика конфиденциальности</h1>
+        <h1 class="internal-template__title internal-template__title--big">Мастер класс / Событие</h1>
       </div>
       <div class="internal-template__content">
-        {{>blocks/privacy-policy/main}}
+
       </div>
     </div>
   </div>
