--- a/app/templates/pages/about.hbs
+++ b/app/templates/pages/about.hbs
@@ -2,7 +2,7 @@
 
 {{> layout/head page-title="О Компании"}}
 
-{{> layout/header current-page="about"}}
+{{> layout/header internal-template=true current-page="about"}}
 
 <main class="internal-template">
   <div class="container">
@@ -23,4 +23,4 @@
   </div>
 </main>
 
-{{> layout/footer }}
+{{> layout/footer internal-template=true }}
