--- a/app/templates/pages/privacy-policy.hbs
+++ b/app/templates/pages/privacy-policy.hbs
@@ -1,9 +1,9 @@
 {{!Политика конфиденциальности}}
 
-{{> layout/head page-title="Политика конфиденциальности"}}
+{{>layout/head page-title="Политика конфиденциальности"}}
 
-{{> layout/header}}
-<main class="internal-template">
+{{>layout/header}}
+<section class="internal-template">
   <div class="container-small">
     <div class="internal-template__container">
       <div class="internal-template__breadcrumbs">
@@ -20,5 +20,5 @@
       </div>
     </div>
   </div>
-</main>
-{{> layout/footer }}
+</section>
+{{>layout/footer}}
