--- a/app/templates/partials/layout/header.hbs
+++ b/app/templates/partials/layout/header.hbs
@@ -13,4 +13,4 @@
   </div>
 </header>
 
-<div class="page__content">
+{{#if internal-template}}<div class="page__content">{{else}}<main class="page__content">{{/if}}
