--- a/app/templates/pages/blog-single.hbs
+++ b/app/templates/pages/blog-single.hbs
@@ -2,7 +2,7 @@
 
 {{> layout/head page-title="Блог / Новость"}}
 
-{{> layout/header current-page="news"}}
+{{> layout/header internal-template=true current-page="news"}}
 <div class="internal-template internal-template--sidebar-enabled">
   <aside class="internal-template__sidebar">
     {{>blocks/common/sidebar}}
@@ -22,4 +22,4 @@
     </div>
   </main>
 </div>
-{{> layout/footer }}
+{{> layout/footer internal-template=true }}
