--- a/app/templates/pages/shop--brand.hbs
+++ b/app/templates/pages/shop--brand.hbs
@@ -2,7 +2,7 @@
 
 {{> layout/head page-title="Каталог товаров / Производитель"}}
 
-{{> layout/header current-page="shop"}}
+{{> layout/header internal-template=true current-page="shop"}}
 <div class="internal-template internal-template--sidebar-enabled">
   <aside class="internal-template__sidebar">
     {{>blocks/common/sidebar active-cat-simple=1}}
@@ -22,4 +22,4 @@
     </div>
   </main>
 </div>
-{{> layout/footer }}
+{{> layout/footer internal-template=true }}
