--- a/app/templates/partials/blocks/privacy-policy/main.hbs
+++ b/app/templates/partials/blocks/privacy-policy/main.hbs
@@ -1,4 +1,4 @@
-<section class="privacy-policy">
+<article class="privacy-policy">
   <h2>Политика в отношении обработки персональных данных</h2>
 
   <h3>1. Общие положения</h3>
@@ -148,4 +148,4 @@
     <li>Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу
       <a href="https://сибхц.рф/privacy-policy/">https://сибхц.рф/privacy-policy/</a>.</li>
   </ol>
-</section>
+</article>
