add About us page
- upd widgets
- fix reasons-item
- add carousel

--- a/app/css/blocks/home/home.scss
+++ b/app/css/blocks/home/home.scss
@@ -354,6 +354,7 @@
   &__item {
     flex: 1 1 floor(100% / 3);
     max-width: floor(100% / 3);
+    padding: 60px 25px;
     border: 1px solid $color-gray-20;
     @include transition;
 
