--- a/app/templates/partials/ui-kit/blocks/widgets.hbs
+++ b/app/templates/partials/ui-kit/blocks/widgets.hbs
@@ -8,7 +8,14 @@
   {{/ui-kit/core/widget}}
   {{#> ui-kit/core/widget title='.reasons-item' width=400 px=1}}
     {{>widgets/reasons-item
-        no-2x=true
+        img="home/reasons/icon-1"
+        ext="png"
+        text="Наличие собственного демонстрационного центра"
+    }}
+  {{/ui-kit/core/widget}}
+  {{#> ui-kit/core/widget title='.reasons-item with centered image' width=400 px=1}}
+    {{>widgets/reasons-item
+        center=true
         img="home/reasons/icon-1"
         ext="png"
         text="Наличие собственного демонстрационного центра"
