--- a/app/css/core/utils.scss
+++ b/app/css/core/utils.scss
@@ -75,3 +75,21 @@
 .bg-white {
   background-color: $color-white;
 }
+
+.image-responsive {
+  position: relative;
+
+  &::after {
+    content: '';
+    display: block;
+    padding-top: 56%;
+  }
+
+  img {
+    @include fill;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+}
