--- a/app/css/widgets/reason-item.scss
+++ b/app/css/widgets/reason-item.scss
@@ -1,12 +1,14 @@
 .reason-item {
   &__content {
-    padding: 60px 25px;
   }
 
   &__image {
     position: relative;
     max-width: 65px;
-    margin: 0 auto;
+
+    @include media(mobile) {
+      margin: 0 auto;
+    }
 
     &::after {
       content: '';
@@ -22,6 +24,10 @@
       height: 100%;
       object-fit: contain;
       object-position: center;
+    }
+
+    &--center {
+      margin: 0 auto;
     }
   }
 
