--- a/app/templates/partials/blocks/home/05_reasons.hbs
+++ b/app/templates/partials/blocks/home/05_reasons.hbs
@@ -8,9 +8,9 @@
         <ul class="home-reasons__list">
           <li class="home-reasons__item">
             {{>widgets/reasons-item
-                no-2x=true
                 img="home/reasons/icon-1"
                 ext="png"
+                center=true
                 text="Наличие собственного демонстрационного центра"
             }}
           </li>
@@ -18,6 +18,7 @@
             {{>widgets/reasons-item
                 img="home/reasons/icon-2"
                 ext="png"
+                center=true
                 text="Многоступенчатый контроль за качеством продукции"
             }}
           </li>
@@ -25,6 +26,7 @@
             {{>widgets/reasons-item
                 img="home/reasons/icon-3"
                 ext="png"
+                center=true
                 text="Эффективные мастер-классы и&nbsp;семинары для&nbsp;клиентов"
             }}
           </li>
@@ -32,6 +34,7 @@
             {{>widgets/reasons-item
                 img="home/reasons/icon-4"
                 ext="png"
+                center=true
                 text="Вся продукция проходит испытания в собственном демо-центре"
             }}
           </li>
@@ -39,6 +42,7 @@
             {{>widgets/reasons-item
                 img="home/reasons/icon-5"
                 ext="png"
+                center=true
                 text="Оперативная доставка и собственный парк авторефрижераторов"
             }}
           </li>
