--- a/app/css/widgets/_index.scss
+++ b/app/css/widgets/_index.scss
@@ -6,3 +6,6 @@
 @import "sidebar-widget";
 @import "sidebar-banner";
 @import "news-card";
+@import "related-event";
+@import "speaker-item";
+@import "ingredient-item";
