--- a/app/templates/pages/events.hbs
+++ b/app/templates/pages/events.hbs
@@ -2,7 +2,7 @@
 
 {{> layout/head page-title="Мастер классы"}}
 
-{{> layout/header internal-template=true current-page="news"}}
+{{> layout/header internal-template=true current-page="events"}}
 <div class="internal-template internal-template--sidebar-enabled">
   <aside class="internal-template__sidebar">
     {{>blocks/common/sidebar}}
