--- a/app/templates/partials/blocks/blog/single.hbs
+++ b/app/templates/partials/blocks/blog/single.hbs
@@ -1,4 +1,4 @@
-<div class="static">
+<div class="privacy-static">
   <p><b>СибХЦ обеспечивает бесперебойные поставки хлебопекарного и кондитерского сырья и ингредиентов, в соответствии с
       партнерскими обязательствами и принципами социальной ответственности!</b></p>
 
