--- a/app/css/components/buttons.scss
+++ b/app/css/components/buttons.scss
@@ -51,8 +51,8 @@
     border: 1px solid $color-primary;
 
     &:hover {
-      color: $color-primary;
-      background-color: transparent;
+      //color: $color-primary;
+      background-color: $color-primary-hover;
     }
   }
 }
