--- a/app/css/config/colors.scss
+++ b/app/css/config/colors.scss
@@ -7,6 +7,7 @@
   --color-font-dark: #333333;
   --color-yellow: #feb22e;
   --color-yellow-hover: #ffbc38;
+  --color-orange-100: #F95724;
 
   // Blue
   --color-blue-100: #0038D7;
@@ -78,6 +79,7 @@ $color-primary-hover: var(--color-primary-hover);
 $color-bg-gray: var(--color-bg-gray);
 $color-font-gray: var(--color-font-gray);
 $color-font-dark: var(--color-font-dark);
+$color-orange-100: var(--color-orange-100);
 
 $color-var1: #532AD3;
 
