--- a/app/css/layout/footer-top.scss
+++ b/app/css/layout/footer-top.scss
@@ -47,6 +47,11 @@
       margin-right: -93px;
       columns: 2;
 
+      @include media(tabletSmall) {
+        min-width: 300px;
+        margin-right: 0;
+      }
+
       @include media(mobile) {
         width: 100%;
         min-width: unset;
