--- a/app/templates/pages/events-single.hbs
+++ b/app/templates/pages/events-single.hbs
@@ -1,10 +1,10 @@
 {{!Мастер классы / Событие}}
 
-{{> layout/head page-title="Мастер классы / Событие"}}
+{{>layout/head page-title="Мастер классы / Событие"}}
 
-{{> layout/header current-page="events"}}
-<main class="internal-template">
-  <div class="container-small">
+{{>layout/header current-page="events"}}
+<section class="internal-template">
+  <div class="container">
     <div class="internal-template__container">
       <div class="internal-template__breadcrumbs">
         <div class="page-breadcrumbs">
@@ -13,12 +13,12 @@
         </div>
       </div>
       <div class="internal-template__header">
-        <h1 class="internal-template__title internal-template__title--big">Мастер класс / Событие</h1>
+        <h1 class="internal-template__title">Мастер класс / Событие</h1>
       </div>
       <div class="internal-template__content">
-
+        {{>blocks/blog/event}}
       </div>
     </div>
   </div>
-</main>
-{{> layout/footer }}
+</section>
+{{>layout/footer}}
