--- a/app/templates/partials/ui-kit/blocks/widgets.hbs
+++ b/app/templates/partials/ui-kit/blocks/widgets.hbs
@@ -35,5 +35,36 @@
         a="Все предлагаемая СибХЦ линейка ингредиентов и сырья проходит обязательный контроль качества и имеет соответствующие сертификаты. Наши ингредиенты позволяют производить вкусную и полезную хлебопекарную и кондитерскую продукцию и (важно) дают возможность упростить и ускорить технологический процесс. Партнерам предоставляется полное бесплатное технологическое сопровождение, т. е. от телефонных консультаций по хранению и применению продукта до участия нашего технолога в производственном процессе. Это является гарантией качества конечного продукта."
     }}
   {{/ui-kit/core/widget}}
+  {{#> ui-kit/core/widget title='.ingredient-item' width=200 px=1}}
+    {{>widgets/ingredient-item
+        img="home/catalog/ex"
+        ext="png"
+        label="Пример ингридиента"
+    }}
+  {{/ui-kit/core/widget}}
+  {{#> ui-kit/core/widget title='.news-card' width=800 px=1}}
+    {{>widgets/news-card}}
+  {{/ui-kit/core/widget}}
+  {{#> ui-kit/core/widget title='.related-event' width=20}}
+    {{>widgets/related-event
+        time="25 сентября 2020 года"
+        title="Семинар-дегустация «Закваски и заварки для хлеба и хлебобулочных изделий»"
+    }}
+  {{/ui-kit/core/widget}}
+  {{#> ui-kit/core/widget title='.sidebar-banner' width=200 px=1}}
+    {{>widgets/sidebar-banner
+        title="Открытые мастер-классы СибХЦ"
+        text="На XVII Сибирском форуме хлебопечения пройдут открытые мастер-классы СибХЦ"
+        img="sidebar/banner/bg"
+        ext="png"
+    }}
+  {{/ui-kit/core/widget}}
+  {{#> ui-kit/core/widget title='.speaker-item' width=200 px=1}}
+    {{>widgets/speaker-item
+        img="speakers/01"
+        ext="jpg"
+        title="Кутуева Лилия"
+    }}
+  {{/ui-kit/core/widget}}
 </li>
 
