--- a/app/css/blocks/common/_index.scss
+++ b/app/css/blocks/common/_index.scss
@@ -1,7 +1,7 @@
 @import "section";
 @import "icons";
 @import "internal-template";
-@import "sidebar";
+//@import "sidebar";
 @import "simple-map";
 @import "static";
 @import "carousel-slider";
