--- a/app/css/blocks/event/event-speakers.scss
+++ b/app/css/blocks/event/event-speakers.scss
@@ -4,9 +4,9 @@
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 12px;
     margin-top: 20px;
+  }
 
-    @include media(tabletSmall) {
-
-    }
+  li {
+    max-width: 190px;
   }
 }
