--- a/app/css/blocks/privacy-policy/privacy-policy.scss
+++ b/app/css/blocks/privacy-policy/privacy-policy.scss
@@ -1,8 +1,4 @@
-.privacy-policy {
-  > :first-child {
-    margin-top: 0;
-  }
-
+.privacy-static {
   h2 {
     display: block;
     margin: 36px 0 0;
