--- a/app/css/components/pagination.scss
+++ b/app/css/components/pagination.scss
@@ -1,9 +1,11 @@
 .pagination {
-  display: flex;
-  align-items: center;
+  &__list {
+    display: flex;
+    align-items: center;
 
-  > * + * {
-    margin-left: 1px;
+    > * + * {
+      margin-left: 1px;
+    }
   }
 
   &__prev {
@@ -18,41 +20,36 @@
     }
   }
 
-  ul {
+  li {
     display: flex;
-
-    > * + * {
-      margin-left: 1px;
-    }
-  }
-
-  a {
-    display: inline-flex;
     align-items: center;
     justify-content: center;
     width: 50px;
     height: 50px;
-    font-size: 14px;
-    text-align: center;
-    background-color: $color-white;
 
-    &:hover {
-      color: $color-font-dark;
-      background-color: $color-primary;
+    @include media(mobile) {
+      width: 42px;
+      height: 42px;
     }
 
     &.active {
-      color: $color-primary;
+      a {
+        color: $color-primary;
 
-      &:hover {
-        color: $color-white;
+        &:hover {
+          color: $color-white;
+        }
       }
     }
   }
 
-  button {
-    width: 50px;
-    height: 50px;
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
     text-align: center;
     background-color: $color-white;
 
