--- a/app/templates/partials/blocks/privacy-policy/main.hbs
+++ b/app/templates/partials/blocks/privacy-policy/main.hbs
@@ -1,4 +1,4 @@
-<article class="privacy-policy">
+<article class="privacy-static">
   <h2>Политика в отношении обработки персональных данных</h2>
 
   <h3>1. Общие положения</h3>
