--- a/app/templates/partials/components/pagination.hbs
+++ b/app/templates/partials/components/pagination.hbs
@@ -1,9 +1,9 @@
 <div class="pagination">
-  <button class="pagination__prev" type="button"><i class="icon-arrowLeft"></i></button>
-  <ul>
-    <li><a class="active" href="#">1</a></li>
+  <ul class="pagination__list">
+    <li class="pagination__prev"><a href="#"><i class="icon-arrowLeft"></i></a></li>
+    <li class="active"><a href="#">1</a></li>
     <li><a href="#">2</a></li>
     <li><a href="#">3</a></li>
+    <li class="pagination__next"><a href="#"><i class="icon-arrowRight"></i></a></li>
   </ul>
-  <button class="pagination__next" type="button"><i class="icon-arrowRight"></i></button>
 </div>
