--- a/app/css/core/svg/_sprite.scss
+++ b/app/css/core/svg/_sprite.scss
@@ -1,4 +1,6 @@
-$icons: (sprite: (width: 52px, height: 52px, pngPath: '../assets/images/sprite.png', svgPath: '../assets/images/sprite.svg'),
+$icons: (sprite: (width: 76px, height: 76px, pngPath: '../assets/images/sprite.png', svgPath: '../assets/images/sprite.svg'),
 comment: (width: 26px, height: 26px, backgroundX: 0px, backgroundY: 0px),
 popup-close: (width: 26px, height: 26px, backgroundX: -26px, backgroundY: -26px),
+right: (width: 12px, height: 12px, backgroundX: -52px, backgroundY: -52px),
+right-primary: (width: 12px, height: 12px, backgroundX: -64px, backgroundY: -64px),
 );
