--- a/app/css/widgets/sidebar-widget.scss
+++ b/app/css/widgets/sidebar-widget.scss
@@ -29,6 +29,14 @@
         &:focus,
         &:focus-within,
         &:hover {
+          &::after {
+            opacity: 1;
+          }
+
+          &::before {
+            opacity: 0;
+          }
+
           .children-menu {
             color: $color-primary;
           }
@@ -54,6 +62,26 @@
           }
         }
 
+        &::before,
+        &::after {
+          content: '';
+          display: block;
+          position: absolute;
+          top: 20px;
+          right: 10px;
+          transform: translateY(-50%) scale(0.8);
+          @include transition;
+        }
+
+        &::before {
+          @include sprite('right');
+        }
+
+        &::after {
+          @include sprite('right-primary');
+          opacity: 0;
+        }
+
         > a {
           display: flex;
           justify-content: space-between;
@@ -64,6 +92,7 @@
 
     a {
       display: block;
+      width: 100%;
       padding: 13px 12px 13px 23px;
       font-size: 14px;
       line-height: normal;
@@ -117,6 +146,8 @@
       }
 
       a {
+        width: 100%;
+
         @include media(tabletSmall) {
           padding-left: 46px;
         }
@@ -136,6 +167,30 @@
       top: 22px;
       right: 23px;
       transform: translateY(-50%);
+    }
+  }
+}
+
+.current-cat {
+  > a {
+    color: $color-primary;
+    padding-left: 21px;
+    border-left: 2px solid $color-primary;
+  }
+}
+
+.current-cat-parent {
+  > a {
+    color: $color-primary;
+    padding-left: 21px;
+    border-left: 2px solid $color-primary;
+  }
+
+  .current-cat {
+    > a {
+      color: $color-primary;
+      padding-left: 23px;
+      border-left: unset;
     }
   }
 }
