--- a/app/templates/partials/blocks/common/sidebar.hbs
+++ b/app/templates/partials/blocks/common/sidebar.hbs
@@ -6,7 +6,7 @@
     <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
     <li class="sidebar-list__item sidebar-list__item--parent">
       <a class="sidebar-list__link{{#if active-cat}} sidebar-list__link--active{{/if}}" href="#"
-         aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+         aria-haspopup="true">Категория товара</a>
       <ul class="sidebar-list__submenu" aria-label="Подменю">
         <li class="sidebar-list__item">
           <a href="#" class="sidebar-list__link">Категория товара</a>
@@ -20,7 +20,7 @@
       </ul>
     </li>
     <li class="sidebar-list__item sidebar-list__item--parent">
-      <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+      <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара</a>
       <ul class="sidebar-list__submenu" aria-label="Подменю">
         <li class="sidebar-list__item">
           <a href="#" class="sidebar-list__link">Категория товара</a>
@@ -38,7 +38,7 @@
     <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
     <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Категория товара</a></li>
     <li class="sidebar-list__item sidebar-list__item--parent">
-      <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара <i class="icon-arrowRight"></i></a>
+      <a class="sidebar-list__link" href="#" aria-haspopup="true">Категория товара</a>
       <ul class="sidebar-list__submenu" aria-label="Подменю">
         <li class="sidebar-list__item">
           <a href="#" class="sidebar-list__link">Категория товара</a>
