--- a/app/templates/partials/blocks/blog/single.hbs
+++ b/app/templates/partials/blocks/blog/single.hbs
@@ -1,23 +1,62 @@
 <div class="privacy-static">
-  <p><b>СибХЦ обеспечивает бесперебойные поставки хлебопекарного и кондитерского сырья и ингредиентов, в соответствии с
-      партнерскими обязательствами и принципами социальной ответственности!</b></p>
+  <p>
+    <b>СибХЦ обеспечивает бесперебойные поставки хлебопекарного и кондитерского сырья и ингредиентов, в соответствии с
+      партнерскими обязательствами и принципами социальной ответственности!</b>
+  </p>
 
-  <p>В условиях сложившейся эпидемиологической ситуации Сибирский хлебопекарный центр обеспечивает регулярные и
-    бесперебойные поставки хлебопекарного и кондитерского сырья и ингредиентов, в соответствии с взятыми обязательствами и
-    принципами социальной ответственности компании.</p>
+  <p>
+    В условиях сложившейся эпидемиологической ситуации Сибирский хлебопекарный центр обеспечивает регулярные и
+    бесперебойные поставки хлебопекарного и кондитерского сырья и ингредиентов, в соответствии с взятыми
+    обязательствами и принципами социальной ответственности компании.
+  </p>
 
-  <p>В это непростое время СибХЦ реализованы комплексные меры, гарантирующие клиентам непрерывный процесс доставки сырьевой
-    продукции, без которой невозможно производство продовольственных товаров первой необходимости.</p>
+  <p>
+    В это непростое время СибХЦ реализованы комплексные меры, гарантирующие клиентам непрерывный процесс
+    доставки сырьевой продукции, без которой невозможно производство продовольственных товаров первой необходимости.
+  </p>
 
-  <p>Стабильность и бесперебойность работы СибХЦ обусловлена поддержанием неснижаемого запаса сырья и ингредиентов на
-    складах компании, усиленными санитарно-гигиеническими мерами, максимальным использованием дистанционных технологий при
-    взаимодействии с клиентами и партнерами, а также следованию принципам четкого выполнения взаимных обязательств.</p>
+  <p>
+    Стабильность и бесперебойность работы СибХЦ обусловлена поддержанием неснижаемого запаса сырья и ингредиентов на
+    складах компании, усиленными санитарно-гигиеническими мерами, максимальным использованием дистанционных
+    технологий при взаимодействии с клиентами и партнерами, а также следованию принципам четкого выполнения
+    взаимных обязательств.
+  </p>
 
-  <p>Компания работает в штатном режиме. Таким образом, выполняется социально-экономическая миссия СибХЦ: создание условий
-    для выпуска жизненно важной продовольственной продукции высочайшего качества, участие в ежедневном производстве
-    свежего, полезного хлеба.</p>
+  <p>
+    Компания работает в штатном режиме. Таким образом, выполняется социально-экономическая миссия СибХЦ:
+    создание условий для выпуска жизненно важной продовольственной продукции высочайшего качества,
+    участие в ежедневном производстве свежего, полезного хлеба.
+  </p>
 
-  <p>Технологи, маркетологи, менеджеры, сотрудники транспортного блока компании, вся команда СибХЦ работает, чтобы
+  <div class="content-note">
+    <b>Важно:</b>
+    <p>Компания работает в штатном режиме. Таким образом, выполняется социально-экономическая миссия СибХЦ:
+      создание условий для выпуска жизненно важной продовольственной продукции высочайшего качества,
+      участие в ежедневном производстве свежего, полезного хлеба.</p>
+  </div>
+
+  <p>
+    Компания работает в штатном режиме. Таким образом, выполняется социально-экономическая миссия СибХЦ:
+    создание условий для выпуска жизненно важной продовольственной продукции высочайшего качества,
+    участие в ежедневном производстве свежего, полезного хлеба.
+  </p>
+
+  <div class="content-note">
+    <p>Компания работает в штатном режиме. Таким образом, выполняется социально-экономическая миссия СибХЦ:
+      создание условий для выпуска жизненно важной продовольственной продукции высочайшего качества,
+      участие в ежедневном производстве свежего, полезного хлеба.</p>
+  </div>
+
+  <p>
+    Технологи, маркетологи, менеджеры, сотрудники транспортного блока компании, вся команда СибХЦ работает, чтобы
     по-прежнему удовлетворять потребности клиентов. Обслуживание, приём заказов и доставка продукции производятся
-    безостановочно, в полном объеме по всему ассортименту без исключения.</p>
+    безостановочно, в полном объеме по всему ассортименту без исключения.
+  </p>
+  <blockquote>
+    <p>«Настало время прислушаться к своим истинным желаниям и пожить в свое удовольствие.Настало время
+      прислушаться
+      к своим истинным желаниям и пожить в свое удовольствие. Балуйте себя приятными покупками, наслаждайтесь
+      культурными мероприятиями»</p>
+    <footer>Иванов Олег Валерьянович</footer>
+  </blockquote>
 </div>
