--- a/app/templates/partials/blocks/blog/single.hbs
+++ b/app/templates/partials/blocks/blog/single.hbs
@@ -1,4 +1,4 @@
-<div class="privacy-static">
+<div class="static">
   <p>
     <b>СибХЦ обеспечивает бесперебойные поставки хлебопекарного и кондитерского сырья и ингредиентов, в соответствии с
       партнерскими обязательствами и принципами социальной ответственности!</b>
@@ -47,11 +47,34 @@
       участие в ежедневном производстве свежего, полезного хлеба.</p>
   </div>
 
+
+  <div class="content-table">
+    <div class="content-table__container">
+      <table>
+        <thead>
+        <tr>
+          <th class="has-text-align-center" data-align="center">Дозировка</th>
+          <th class="has-text-align-center" data-align="center">Хранение</th>
+          <th class="has-text-align-center" data-align="center">Упаковка</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td class="has-text-align-center" data-align="center">5-10% к массе муки</td>
+          <td class="has-text-align-center" data-align="center">0-6 С., 4-6 мес.</td>
+          <td class="has-text-align-center" data-align="center">ведро 6 кг</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
   <p>
     Технологи, маркетологи, менеджеры, сотрудники транспортного блока компании, вся команда СибХЦ работает, чтобы
     по-прежнему удовлетворять потребности клиентов. Обслуживание, приём заказов и доставка продукции производятся
     безостановочно, в полном объеме по всему ассортименту без исключения.
   </p>
+
   <blockquote>
     <p>«Настало время прислушаться к своим истинным желаниям и пожить в свое удовольствие.Настало время
       прислушаться
