fix large categories name

--- a/app/css/widgets/sidebar-widget.scss
+++ b/app/css/widgets/sidebar-widget.scss
@@ -98,7 +98,8 @@
       line-height: normal;
 
       @include media(mobile, up) {
-        white-space: nowrap;
+        //white-space: nowrap;
+        min-width: 235px;
       }
 
       &:focus-within,
